src/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
      # we need to create ingres for port '15672' so that we can be able to communicate with rabbitMQ using rabbitMQ GUI management console using web browser
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
